--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
     <dependency>
         <groupId>org.mapstruct</groupId>
         <artifactId>mapstruct</artifactId>
-        <version>1.6.2</version>
+        <version>1.6.3</version>
     </dependency>
 
     <dependency>
@@ -90,6 +90,10 @@
         <artifactId>mapstruct-processor</artifactId>
         <version>1.6.3</version>
     </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
 <!--            <dependency>-->
 <!--                <groupId>org.springdoc</groupId>-->
@@ -162,30 +166,24 @@
 
         </dependencies>
     </plugin>
+
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version> <!-- Use latest stable -->
         <configuration>
+            <source>17</source>
+            <target>17</target>
             <annotationProcessorPaths>
                 <path>
                     <groupId>org.projectlombok</groupId>
                     <artifactId>lombok</artifactId>
                     <version>1.18.40</version>
                 </path>
-            </annotationProcessorPaths>
-        </configuration>
-    </plugin>
-
-    <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-            <annotationProcessorPaths>
                 <path>
                     <groupId>org.mapstruct</groupId>
                     <artifactId>mapstruct-processor</artifactId>
-                    <version>1.5.5.Final</version>
+                    <version>1.6.3</version>
                 </path>
             </annotationProcessorPaths>
         </configuration>
