--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,3 +13,7 @@ spring:
     secret: ${JWT_SECRET}
     accessTokenExpiration: 86400
     refreshTokenExpiration: 604800
+
+stripe :
+  secretKey : ${STRIPE_SECRET_KEY}
+websiteUrl : http://localhost:4040
