--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,4 +16,7 @@ spring:
 
 stripe :
   secretKey : ${STRIPE_SECRET_KEY}
+  webhooksecretkey: ${STRIPE_WEBHOOK_SECRET_KEY}
+
+
 websiteUrl : http://localhost:4040
