--- a/pom.xml
+++ b/pom.xml
@@ -172,8 +172,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.11.0</version> <!-- Use latest stable -->
         <configuration>
-            <source>17</source>
-            <target>17</target>
+            <source>23</source>
+            <target>23</target>
             <annotationProcessorPaths>
                 <path>
                     <groupId>org.projectlombok</groupId>
@@ -186,6 +186,7 @@
                     <version>1.6.3</version>
                 </path>
             </annotationProcessorPaths>
+            <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
     </plugin>
 
